// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders App 1`] = `
<Loading
  loading={false}
/>
`;

exports[`App component renders App in Loading state 1`] = `
<Loading
  loading={true}
/>
`;
